--- a/style.css
+++ b/style.css
@@ -23,10 +23,16 @@ body{
   }
 
   .calculator-container{
-      position: absolute;
-      margin-top: -21.5%;
-      margin-left: 22%;
-      border: white solid 2px;
+    width: 370px;
+    height: 350px;
+    background-color: transparent;
+    position: absolute;
+    left: 30%;
+    top: 39.8%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #fff;
+    padding: 20px 0 0 100px;
+    border-radius: 0px;
   }
 
   .loan-container{
@@ -66,6 +72,85 @@ input:focus{
 .logo{
     position: absolute;
     top: 18px;
-    left: 420px
+    left: 25%
 
+}
+
+#query{
+    width: 250px;
+  }
+  
+#search-button{
+    background-color: black;
+    border: 2.2px solid white;
+    color: white;
+    padding: 3.5px 7px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  .container {
+    width: 320px;
+    background-color: transparent;
+    position: absolute;
+    top: 55%;
+    left: 87%;
+    transform: translateX(-50%) translateY(-50%);
+    padding: 50px;
+  }
+  
+  .add-video-p{
+    color: white;
+    text-align: left;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .input-code{
+    width: 250px;
+  }
+  
+  
+  .add-video-button{
+    background-color: yellow;
+    border: 1.5px solid black;
+    color: black;
+    padding: 2px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  .condition-button{
+    background-color: black;
+    border: 1.5px solid white;
+    color: white;
+    padding: 2px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .youtube-search{
+    width: 320px;
+    background-color: transparent;
+    position: absolute;
+    top: 43%;
+    left: 87%;
+    transform: translateX(-50%) translateY(-50%);
+    padding: 50px;
+  }
+
+.clock-beirut{
+    position: absolute;
+    top: 15.5%;
+    left: 85%;
+    transform: translateX(-50%) translateY(-50%);
 }
